<resources>
    <string name="app_name">Test</string>
    <string name="textStart">Démarrer</string>
    <string name="textStop">Arrêter</string>
    <string name="textRestaurant">Restaurant</string>
    <string name="textWaiting">Attente/Pause</string>
    <string name="textCustomer">Client</string>
    <string name="StatutStart">"En ligne"</string>
    <string name="StatutStop">"Hors ligne"</string>
    <string name="TitleNotification">Texte Notification</string>
    <string name="ContentTextNotification">"Votre position s'enregistre"</string>
    <string name="taostGPSInactive">"Veuillez activer votre GPS."</string>
    <string name="taostPermissionRefusee">"L'application a besoin de votre autorisation de relever votre position."</string>
    <string name="textPlateforme">"Plateforme"</string>
    <string name="plateforme1">"Deliveroo"</string>
    <string name="plateforme2">"Foodora"</string>
    <string name="plateforme3">"UberEat"</string>
    <string name="plateforme4">"Stuart"</string>
    <string name="plateforme5">"Autre"</string>
    <string name="title_activity_history">Historique</string>
    <string name="textExport">Export</string>
    <string name="textHistorique">Historique</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="nameNewRestaurant">nom du restaurant</string>
    <string name="retourSelectionDate">Retour</string>
    <string name="textPasDeMouvement">"Il n'y a pas de mouvement enregistré pour cette date"</string>
    <string name="textSelectionPlateforme">"Plateforme :"</string>
    <string name="title_activity_new_restaurant">Nouveau Restaurant!</string>
    <string name="select_new_restaurant">Nouveau restaurant</string>
    <string name="textSelectRestaurant">"Veuillez selectionner le restaurant: "</string>
    <string name="textParametres">Parametres</string>

    <string name="textDateStartExport">Date de début</string>
    <string name="textDateStopExport">Date de fin</string>

    <string name="textPath">Fichier csv sauvegardé sous </string>
    <string name="nameFile">"/tableLocalisation-"</string>
    <string name="titleFile">"time;latitude;longitude;durée attente;indication;idResto;x; y\n"</string>

    <string-array name="plateforme">

        <item>Deliveroo</item>
        <item>Foodora</item>
        <item>UberEat</item>
        <item>Stuart</item>
        <item>Autre</item>

    </string-array>

    <string-array name="indication">

        <item>""</item>
        <item>indication par défaut</item>
        <item>trajet inconnu</item>
        <item>trajet resto</item>
        <item>trajet client</item>
        <item>arrêt inconnu</item>
        <item>restaurant</item>
        <item>client</item>
        <item>attente</item>
        <item>restaurant</item>
        <item>client</item>
        <item>restaurant</item>
        <item>client</item>
        <item>attente</item>

        <item>Début Shift</item>
        <item>Fin Shift</item>

        <item>Changement plateforme: Deliveroo</item>
        <item>Changement plateforme: Foodora</item>
        <item>Changement plateforme: Stuart</item>
        <item>Changement plateforme: UberEat</item>
        <item>Changement plateforme: Autre</item>


    </string-array>
    <string name="title_activity_select_restaurant">Selection Restaurant</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


</resources>
