<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.martin.test.FragmentSelectPlateforme">

    <!-- TODO: Update blank fragmprefyout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectDateConstraintLayout">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plateforme1" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plateforme2" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plateforme3"
                 />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plateforme4" />
            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plateforme5" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textPlateforme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ButtonSelectPlateforme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="@+id/selectDateConstraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
